--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "express": "^4.18.2",
     "knex": "^3.1.0",
     "node": "^21.6.1",
