--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^3.1.0",
     "node": "^21.6.1",
