--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^3.1.0",
+    "nanoid": "^5.0.7",
     "node": "^21.6.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
